# HCC_MVI_ITH_radiomics_reproducibility

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_demo.sh
config/: demo_pipeline.yml  feature_manifest.yml  pipeline.yml  pyradiomics.yml
demo_data/: README_demo_data.md  clinical_variables.csv  generate_synthetic_demo.py
docs/: data_dictionary.md  methods_crosswalk.md  reproducibility_checklist.md  validation_log.md
scripts/: check_hosmer_lemeshow.py  compare_delong.py  evaluate_predictions.py  predict_locked.py  run_demo.py  shap_interpretability.py  survival_analysis.py  train_pipeline.py
src/hcc_mvi_ith/: __init__.py  feature_selection.py  habitat.py  interpretability.py  io.py  local_features.py  metrics.py  models.py  pipeline.py  plots.py  preprocessing.py  radiomics_features.py  roi.py  survival.py
tests/: test_delong_survival.py  test_ith_score.py  test_metrics.py  test_reproducibility_guards.py
